tests/samples/negative/pointers/deref_opaque_pointer.ax
module deref_opaque_pointer;

extern c {
    opaque struct Handle;
}

fn bad() -> void {
    let handle: *mut Handle = ptrat<*mut Handle>(0);
    return *handle;
}

fn main() -> i32 {
    return 0;
}
